--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/school-system/test/jest-e2e.json"
+    "test:e2e": "jest --config ./apps/school-system/test/jest-e2e.json",
+    "seed:school": "ts-node -r tsconfig-paths/register apps/school-system/seed.ts",
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
