feat: criação do seed de dados e do script de execução

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/school-system/test/jest-e2e.json",
     "seed:school": "ts-node -r tsconfig-paths/register apps/school-system/seed.ts",
+    "seed:notes-service": "ts-node -r tsconfig-paths/register apps/notes-service/src/seed.ts",
+    "seed:all": "npm run seed:school && npm run seed:notes-service"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
