fix: adição das portas externas para o banco de dados e remoção de valores default nos modules

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,25 @@
-# Variáveis de ambiente referente ao microservice School System
-SCHOOL_SYSTEM_PORT= # Porta da api, valor default 3000
+# Portas dos microservices
+SCHOOL_SYSTEM_PORT=3000
+SERVICE_NOTES_PORT=3001
 
-SCHOOL_SYSTEM_DB_PORT= # Porta do banco de dados school_system, valor default: 5432
-SCHOOL_SYSTEM_DB_USER= # Usuário referente ao banco school_system, valor default: dudu1
-SCHOOL_SYSTEM_DB_PASSWORD= # Senha do usuário, valor default: 1234567
+# Configuração Interna (Docker)
+# Hosts são os nomes dos serviços no docker-compose
+SCHOOL_SYSTEM_DB_HOST=school-system-database
+SERVICE_NOTES_DB_HOST=service-notes-database
 
-# Microservice Service Notes
-SERVICE_NOTES_PORT= # Valor padrão: 3001
+# Porta interna é SEMPRE 5432 para comunicação entre containers
+SCHOOL_SYSTEM_DB_PORT=5432
+SERVICE_NOTES_DB_PORT=5432
 
-SERVICE_NOTES_DB_PORT= # Valor padrão: 5433
-SERVICE_NOTES_DB_USER= # Valor padrão: dudu2
-SERVICE_NOTES_DB_PASSWORD= # Valor padrão: 1234567
+# Credenciais referente ao bancos school_system e service_notes
+SCHOOL_SYSTEM_DB_USER=dudu1
+SCHOOL_SYSTEM_DB_PASSWORD=1234567
+SCHOOL_SYSTEM_DB=school_system
+
+SERVICE_NOTES_DB_USER=dudu2
+SERVICE_NOTES_DB_PASSWORD=1234567
+SERVICE_NOTES_DB=service_notes
+
+# Portas Externas (Apenas para acesso visual/admin do Host)
+SCHOOL_SYSTEM_DB_EXTERNAL_PORT=5434
+SERVICE_NOTES_DB_EXTERNAL_PORT=5433
