--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,11 @@ services:
     networks:
       - school-system-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${SCHOOL_SYSTEM_DB_USER} -d ${SCHOOL_SYSTEM_DB}"]
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U ${SCHOOL_SYSTEM_DB_USER} -d ${SCHOOL_SYSTEM_DB}",
+        ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -34,7 +38,7 @@ services:
     depends_on:
       school-system-database:
         condition: service_healthy
-    entrypoint: ["/bin/sh", "/usr/src/app/entrypoint.sh"]
+    command: npm run docker:entrypoint
     networks:
       - school-system-network
       - network-microservices
@@ -57,7 +61,11 @@ services:
     networks:
       - service-notes-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${SERVICE_NOTES_DB_USER} -d ${SERVICE_NOTES_DB}"]
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U ${SERVICE_NOTES_DB_USER} -d ${SERVICE_NOTES_DB}",
+        ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -77,7 +85,7 @@ services:
     depends_on:
       service-notes-database:
         condition: service_healthy
-    entrypoint: ["/bin/sh", "/usr/src/app/entrypoint.sh"]
+    command: npm run docker:entrypoint
     networks:
       - service-notes-network
       - network-microservices
