--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:e2e": "jest --config ./apps/school-system/test/jest-e2e.json",
     "seed:school-system": "ts-node -r tsconfig-paths/register apps/school-system/seed.ts",
     "seed:service-notes": "ts-node -r tsconfig-paths/register apps/service-notes/seed.ts",
-    "seed:all": "npm run seed:school-system && npm run seed:service-notes"
+    "seed:all": "npm run seed:school-system && npm run seed:service-notes",
+    "docker:entrypoint": "sleep 5 && npm run seed:$APP_NAME && npm run start:dev -- $APP_NAME"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
